(rss)  Make feed fetcher use Apache's HttpClient